{
    "name": "VoxelEditorInput",
    "maps": [
        {
            "name": "Editor",
            "id": "39885907-c59b-4e8e-b2f7-a7f13af2df71",
            "actions": [
                {
                    "name": "CameraPan",
                    "type": "Value",
                    "id": "040eafd8-6076-473a-bec3-9f02e45062d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotate",
                    "type": "Value",
                    "id": "73b75e47-0d9a-4b23-b605-d20d46a5641a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "92bebe5b-8bea-4e05-8b09-ddb31aba314e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlaceBlock",
                    "type": "Button",
                    "id": "915b2316-8094-4561-8b23-3a226a0e2a81",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveBlock",
                    "type": "Button",
                    "id": "bc3a2dee-b657-492d-b5f0-235bf629eab8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "70cb985d-4dfc-4c54-bfc7-e5f640ab7f52",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraPan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "78f09381-49ce-49ca-9628-2d4fe05bf8a1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraPan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "6daf7aa4-38da-415e-86c2-769967957666",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraPan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "bc8c8132-ae57-49fc-85e0-62be55c6d92b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "8ebf09c0-ba31-47b9-ad7a-69ec3a516659",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "b356f57a-1bc1-4ce6-99c2-5684e039c3d2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "52be15d4-927b-45f4-a5cd-572a1e8aa993",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "8022bf2e-c3db-4a23-bfad-74e41cc4965d",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveBlock",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "4c5db633-77d1-4cce-9028-f9f055cd1c5e",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveBlock",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "b337c172-a510-423e-9409-953c2813468f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveBlock",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8778c576-3c31-47c9-a8d7-7d504919ef6b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}